# ResourceLoader

./: CMakeLists.txt  LICENSE  ResourceLoader.cpp  test.cpp
inc/: Resources.hpp  lib.hpp
resources/text/: lorem_ipsum1.txt
resources/text/special_text/: lorem_ipsum2.txt
resources/text/special_text/super_special_text/: lorem_ipsum4.txt
src/: lib.cpp
